--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,22 +1,35 @@
 plugins {
+
+    id 'application'
+    id 'java'
+    id 'java-library'
     // id for library
     // id for maven to publish jar to local repository
 }
 
+apply plugin: 'maven-publish'
+
 java {
-// provide sourceCompatibility
+    sourceCompatibility = "1.8"
+    // provide sourceCompatibility
 }
 
 repositories {
-// provide repository, where required dependencies are located
+
+    mavenCentral()
+    // provide repository, where required dependencies are located
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
+
+            group = 'com.mjcschool'
+            version = '1.3.5'
+
+        // provide groupId
+        // provide artifactId
+        // provide version
 
             from components.java
         }
@@ -24,9 +37,17 @@ publishing {
 }
 
 //add Apache Apache Commons Lang 3.10 (or higher) dependency
+dependencies {
+
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+
+}
 
 jar {
     manifest {
+
+        attributes('Implementation-Title' : "utils",
+                'Implementation-Version' : "1.3.5")
         //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
     }
 }
