--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,55 +1,22 @@
-//add everything here
-
 plugins {
-    id 'application'
     id 'java'
-    id 'java-library'
-
-    // id for library
-    // id for maven to publish jar to local repository
 }
 
-apply plugin: 'maven-publish'
+group = 'com.epam.demo'
+version = '1.3.5'
 
 java {
-    sourceCompatibility = "1.8"
-
-// provide sourceCompatibility
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
-// provide repository, where required dependencies are located
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            group = 'com.mjcschool'
-            version = '1.3.5'
-// provide groupId
-// provide artifactId
-// provide version
-
-            from components.java
-        }
-    }
-}
-
-
-//add Apache Apache Commons Lang 3.10 (or higher) dependency
 dependencies {
-// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
-
-}
-
-jar {
-    manifest {
-        attributes('Implementation-Title' : "utils",
-                'Implementation-Version' : "1.3.5")
-        //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
-    }
+    implementation project(':utils')
 }
 
 test {
