--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,54 +1,37 @@
 plugins {
-
-    id 'application'
     id 'java'
-    id 'java-library'
-    // id for library
-    // id for maven to publish jar to local repository
+    id 'maven-publish'
 }
 
-apply plugin: 'maven-publish'
-
 java {
-    sourceCompatibility = "1.8"
-    // provide sourceCompatibility
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
-
     mavenCentral()
-    // provide repository, where required dependencies are located
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-
-            group = 'com.mjcschool'
+            groupId = 'com.epam.utils'
+            artifactId = 'utils'
             version = '1.3.5'
-
-        // provide groupId
-        // provide artifactId
-        // provide version
 
             from components.java
         }
     }
 }
 
-//add Apache Apache Commons Lang 3.10 (or higher) dependency
 dependencies {
-
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
-
+    implementation 'org.apache.commons:commons-lang3:3.10'
 }
 
 jar {
     manifest {
-
-        attributes('Implementation-Title' : "utils",
-                'Implementation-Version' : "1.3.5")
-        //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
+        attributes 'Implementation-Title': 'Gradle Utils',
+                'Implementation-Version': '1.3.5'
     }
 }
 
